<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/greyBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:cursorVisible="false"
                android:gravity="center"
                android:background="@drawable/cardlayout"
                android:id="@+id/email_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:maxLines="1" />

            <EditText
                android:cursorVisible="false"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/cardlayout"
                android:id="@+id/password_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:background="@drawable/gradient"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:text="@string/login" />

                <TextView
                    android:id="@+id/forgot_password_text_view"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:clickable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_account_text_view"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_marginBottom="4dp"/>

            <Button
                android:background="@drawable/gradient"
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>