<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:background="@color/greyBlack"
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:cursorVisible="false"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:background="@color/fadedBlack"
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:cursorVisible="false"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:background="@color/fadedBlack"
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:cursorVisible="false"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:background="@color/fadedBlack"
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:background="@drawable/gradient"
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:text="@string/create_account" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/existing_account" />

            <Button
                android:background="@drawable/gradient"
                android:id="@+id/back_to_login"
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeightSmall"
                android:text="@string/login" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>